# GEMASTIK

./: README.md
CTF - Cyber Security/: README.md
DATA MINING - Penambangan Data/: deep-research-report(1).md  panganshock-x-spec.md  possible-idea.md
DATA MINING - Penambangan Data/PanganFlow-ID/: .gitignore  README.md  panganflow-spec.md  pyproject.toml  requirements.txt
DATA MINING - Penambangan Data/PanganFlow-ID/dashboard/: app.py  static_preview.html
DATA MINING - Penambangan Data/PanganFlow-ID/data/processed/: flow_recommendations.csv  latest_province_snapshot.csv  province_commodity_panel.csv  province_distance_matrix.csv
DATA MINING - Penambangan Data/PanganFlow-ID/data/raw/: bapanas_harga_pangan_bulanan_konsumen_provinsi.csv  bi_pihps_commodities.json  bi_pihps_provinces.json  bps_rice_balance_snapshot.csv
DATA MINING - Penambangan Data/PanganFlow-ID/notebooks/: PanganFlow-ID-analysis.ipynb
DATA MINING - Penambangan Data/PanganFlow-ID/reports/: GEMASTIK XVIII Penambangan Data - ID_TIM - NAMA_TIM - PanganFlow.ID.docx
DATA MINING - Penambangan Data/PanganFlow-ID/reports/tables/: case_studies.csv  cluster_snapshot.csv  cluster_summary.csv  dataset_summary.csv  dataset_summary.json  feature_ablation.csv  feature_importance.csv  metrics_summary.csv  model_card.json  ranking_snapshot.csv  ranking_stability.csv  source_status.csv  subgroup_fairness.csv  test_scored_panel.csv  unmatched_provinces_for_manual_review.csv  validation_checks.csv
DATA MINING - Penambangan Data/PanganFlow-ID/src/: build_dataset.py  build_formal_report.py  train_panganflow.py
(+229 files in other folders)
