[project]
name = "panganflow-id"
version = "0.1.0"
description = "GEMASTIK Data Mining prototype for rice supply imbalance and interprovincial redistribution priority."
requires-python = ">=3.12"
dependencies = [
  "matplotlib>=3.10.0",
  "numpy>=2.2.0",
  "pandas>=2.2.0",
  "pillow>=11.0.0",
  "plotly>=6.0.0",
  "python-docx>=1.1.2",
  "requests>=2.32.0",
  "scikit-learn>=1.6.0",
  "streamlit>=1.45.0",
  "ipykernel>=6.29.0",
  "nbformat>=5.10.0",
]

[tool.uv]
package = false
